[gd_scene load_steps=37 format=2]

[ext_resource path="res://Scripts/PlayerController.gd" type="Script" id=1]
[ext_resource path="res://Scripts/CameraController.gd" type="Script" id=2]
[ext_resource path="res://Scripts/InclineDetector.gd" type="Script" id=3]
[ext_resource path="res://Scripts/DebugRayPlayer.gd" type="Script" id=4]
[ext_resource path="res://Scripts/BottomRays.gd" type="Script" id=5]
[ext_resource path="res://Scripts/ChainDetector.gd" type="Script" id=6]
[ext_resource path="res://Scripts/VaultTween.gd" type="Script" id=7]
[ext_resource path="res://Scripts/WindowSmasher.gd" type="Script" id=8]
[ext_resource path="res://Scripts/WallDetectorRays.gd" type="Script" id=9]
[ext_resource path="res://Scripts/LedgeDetector.gd" type="Script" id=10]
[ext_resource path="res://Sounds/Jump.wav" type="AudioStream" id=11]
[ext_resource path="res://Scripts/JumpAudio.gd" type="Script" id=12]
[ext_resource path="res://Sounds/Running-on-ground.wav" type="AudioStream" id=13]
[ext_resource path="res://Scripts/StepAudio.gd" type="Script" id=14]
[ext_resource path="res://Scripts/GushingAirAudio.gd" type="Script" id=15]
[ext_resource path="res://Sounds/Blowing-wind.wav" type="AudioStream" id=16]
[ext_resource path="res://Scenes/HUD.tscn" type="PackedScene" id=17]
[ext_resource path="res://Models/Character.glb" type="PackedScene" id=18]
[ext_resource path="res://Scripts/CharacterAnimations.gd" type="Script" id=19]
[ext_resource path="res://materials/SlideEffectMaterial.tres" type="Material" id=20]
[ext_resource path="res://Scripts/SlideParticleSystem.gd" type="Script" id=21]
[ext_resource path="res://Sounds/SlidingOnGravel.wav" type="AudioStream" id=23]
[ext_resource path="res://Sounds/FootstepsOnMetal.wav" type="AudioStream" id=24]
[ext_resource path="res://Sounds/PullUpSound.wav" type="AudioStream" id=25]

[sub_resource type="CapsuleMesh" id=1]

[sub_resource type="CylinderShape" id=4]
height = 3.0
radius = 0.997

[sub_resource type="CapsuleShape" id=6]
radius = 0.950168
height = 1.02899

[sub_resource type="CylinderShape" id=8]
height = 2.57029
radius = 1.20708

[sub_resource type="BoxShape" id=9]
extents = Vector3( 0.998924, 1.5016, 1.03193 )

[sub_resource type="AudioStreamRandomPitch" id=13]
audio_stream = ExtResource( 16 )

[sub_resource type="AudioStreamRandomPitch" id=10]
audio_stream = ExtResource( 11 )

[sub_resource type="AudioStreamRandomPitch" id=17]
audio_stream = ExtResource( 13 )

[sub_resource type="AudioStreamRandomPitch" id=12]
audio_stream = ExtResource( 25 )

[sub_resource type="PlaneMesh" id=14]
material = ExtResource( 20 )
size = Vector2( 0.5, 0.5 )

[sub_resource type="PlaneMesh" id=15]
size = Vector2( 0.978, 0.016 )

[sub_resource type="AudioStreamRandomPitch" id=16]
audio_stream = ExtResource( 24 )

[node name="Player" type="KinematicBody"]
collision_layer = 4
collision_mask = 3
script = ExtResource( 1 )

[node name="Pivot" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0 )

[node name="Character" type="MeshInstance" parent="Pivot"]
visible = false
mesh = SubResource( 1 )

[node name="CharacterModel" parent="Pivot" instance=ExtResource( 18 )]
transform = Transform( -0.5, 1.86353e-21, -4.37114e-08, 4.37114e-08, -2.02384e-08, -0.5, -1.91069e-15, -0.463, 2.18557e-08, 0, 0.199211, 0.270931 )
script = ExtResource( 19 )

[node name="NormalCollider" type="CollisionShape" parent="."]
shape = SubResource( 4 )

[node name="Camera" type="Camera" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.967231, -0.284781 )
far = 8192.0
script = ExtResource( 2 )

[node name="WallDetectorRays" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.788939, 0 )
visible = false
script = ExtResource( 9 )
ray_size = 1.06

[node name="RayCast" type="RayCast" parent="WallDetectorRays"]
enabled = true
cast_to = Vector3( 0, 0, 1.06 )
collision_mask = 3
debug_shape_custom_color = Color( 0.968627, 1, 0, 1 )

[node name="RayCast13" type="RayCast" parent="WallDetectorRays"]
transform = Transform( 0.965926, 0, 0.258819, 0, 1, 0, -0.258819, 0, 0.965926, 0, 0, 0 )
enabled = true
cast_to = Vector3( 0, 0, 1.06 )
collision_mask = 3
debug_shape_custom_color = Color( 0.968627, 1, 0, 1 )

[node name="RayCast8" type="RayCast" parent="WallDetectorRays"]
transform = Transform( -1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0, 0 )
enabled = true
cast_to = Vector3( 0, 0, 1.06 )
collision_mask = 3
debug_shape_custom_color = Color( 0.968627, 1, 0, 1 )

[node name="RayCast14" type="RayCast" parent="WallDetectorRays"]
transform = Transform( -0.965926, 0, -0.258819, 0, 1, 0, 0.258819, 0, -0.965926, 0, 0, 0 )
enabled = true
cast_to = Vector3( 0, 0, 1.06 )
collision_mask = 3
debug_shape_custom_color = Color( 0.968627, 1, 0, 1 )

[node name="RayCast5" type="RayCast" parent="WallDetectorRays"]
transform = Transform( 0.866025, 0, 0.5, 0, 1, 0, -0.5, 0, 0.866025, 0, 0, 0 )
enabled = true
cast_to = Vector3( 0, 0, 1.06 )
collision_mask = 3
debug_shape_custom_color = Color( 0.968627, 1, 0, 1 )

[node name="RayCast15" type="RayCast" parent="WallDetectorRays"]
transform = Transform( 0.707106, 0, 0.707107, 0, 1, 0, -0.707107, 0, 0.707106, 0, 0, 0 )
enabled = true
cast_to = Vector3( 0, 0, 1.06 )
collision_mask = 3
debug_shape_custom_color = Color( 0.968627, 1, 0, 1 )

[node name="RayCast6" type="RayCast" parent="WallDetectorRays"]
transform = Transform( 0.5, 0, 0.866025, 0, 1, 0, -0.866025, 0, 0.5, 0, 0, 0 )
enabled = true
cast_to = Vector3( 0, 0, 1.06 )
collision_mask = 3
debug_shape_custom_color = Color( 0.968627, 1, 0, 1 )

[node name="RayCast16" type="RayCast" parent="WallDetectorRays"]
transform = Transform( 0.258819, 0, 0.965925, 0, 1, 0, -0.965925, 0, 0.258819, 0, 0, 0 )
enabled = true
cast_to = Vector3( 0, 0, 1.06 )
collision_mask = 3
debug_shape_custom_color = Color( 0.968627, 1, 0, 1 )

[node name="RayCast9" type="RayCast" parent="WallDetectorRays"]
transform = Transform( -0.5, 0, 0.866025, 0, 1, 0, -0.866025, 0, -0.5, 0, 0, 0 )
enabled = true
cast_to = Vector3( 0, 0, 1.06 )
collision_mask = 3
debug_shape_custom_color = Color( 0.968627, 1, 0, 1 )

[node name="RayCast17" type="RayCast" parent="WallDetectorRays"]
transform = Transform( -0.258819, 0, 0.965925, 0, 1, 0, -0.965925, 0, -0.258819, 0, 0, 0 )
enabled = true
cast_to = Vector3( 0, 0, 1.06 )
collision_mask = 3
debug_shape_custom_color = Color( 0.968627, 1, 0, 1 )

[node name="RayCast10" type="RayCast" parent="WallDetectorRays"]
transform = Transform( -0.866025, 0, 0.5, 0, 1, 0, -0.5, 0, -0.866025, 0, 0, 0 )
enabled = true
cast_to = Vector3( 0, 0, 1.06 )
collision_mask = 3
debug_shape_custom_color = Color( 0.968627, 1, 0, 1 )

[node name="RayCast18" type="RayCast" parent="WallDetectorRays"]
transform = Transform( -0.965925, 0, 0.258819, 0, 1, 0, -0.258819, 0, -0.965925, 0, 0, 0 )
enabled = true
cast_to = Vector3( 0, 0, 1.06 )
collision_mask = 3
debug_shape_custom_color = Color( 0.968627, 1, 0, 1 )

[node name="RayCast7" type="RayCast" parent="WallDetectorRays"]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0, 0, 0 )
enabled = true
cast_to = Vector3( 0, 0, 1.06 )
collision_mask = 3
debug_shape_custom_color = Color( 0.968627, 1, 0, 1 )

[node name="RayCast19" type="RayCast" parent="WallDetectorRays"]
transform = Transform( -0.707107, 0, 0.707107, 0, 1, 0, -0.707107, 0, -0.707107, 0, 0, 0 )
enabled = true
cast_to = Vector3( 0, 0, 1.06 )
collision_mask = 3
debug_shape_custom_color = Color( 0.968627, 1, 0, 1 )

[node name="RayCast20" type="RayCast" parent="WallDetectorRays"]
transform = Transform( -0.707107, 0, -0.707107, 0, 1, 0, 0.707107, 0, -0.707107, 0, 0, 0 )
enabled = true
cast_to = Vector3( 0, 0, 1.06 )
collision_mask = 3
debug_shape_custom_color = Color( 0.968627, 1, 0, 1 )

[node name="RayCast2" type="RayCast" parent="WallDetectorRays"]
transform = Transform( 0.866025, 0, -0.5, 0, 1, 0, 0.5, 0, 0.866025, 0, 0, 0 )
enabled = true
cast_to = Vector3( 0, 0, 1.06 )
collision_mask = 3
debug_shape_custom_color = Color( 0.968627, 1, 0, 1 )

[node name="RayCast3" type="RayCast" parent="WallDetectorRays"]
transform = Transform( 0.5, 0, -0.866025, 0, 1, 0, 0.866025, 0, 0.5, 0, 0, 0 )
enabled = true
cast_to = Vector3( 0, 0, 1.06 )
collision_mask = 3
debug_shape_custom_color = Color( 0.968627, 1, 0, 1 )

[node name="RayCast22" type="RayCast" parent="WallDetectorRays"]
transform = Transform( 0.258819, 0, -0.965925, 0, 1, 0, 0.965925, 0, 0.258819, 0, 0, 0 )
enabled = true
cast_to = Vector3( 0, 0, 1.06 )
collision_mask = 3
debug_shape_custom_color = Color( 0.968627, 1, 0, 1 )

[node name="RayCast23" type="RayCast" parent="WallDetectorRays"]
transform = Transform( 0.707107, 0, -0.707106, 0, 1, 0, 0.707106, 0, 0.707107, 0, 0, 0 )
enabled = true
cast_to = Vector3( 0, 0, 1.06 )
collision_mask = 3
debug_shape_custom_color = Color( 0.968627, 1, 0, 1 )

[node name="RayCast24" type="RayCast" parent="WallDetectorRays"]
transform = Transform( 0.965926, 0, -0.258819, 0, 1, 0, 0.258819, 0, 0.965926, 0, 0, 0 )
enabled = true
cast_to = Vector3( 0, 0, 1.06 )
collision_mask = 3
debug_shape_custom_color = Color( 0.968627, 1, 0, 1 )

[node name="RayCast4" type="RayCast" parent="WallDetectorRays"]
transform = Transform( -4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 0, 0, 0 )
enabled = true
cast_to = Vector3( 0, 0, 1.06 )
collision_mask = 3
debug_shape_custom_color = Color( 0.968627, 1, 0, 1 )

[node name="RayCast11" type="RayCast" parent="WallDetectorRays"]
transform = Transform( -0.5, 0, -0.866025, 0, 1, 0, 0.866025, 0, -0.5, 0, 0, 0 )
enabled = true
cast_to = Vector3( 0, 0, 1.06 )
collision_mask = 3
debug_shape_custom_color = Color( 0.968627, 1, 0, 1 )

[node name="RayCast21" type="RayCast" parent="WallDetectorRays"]
transform = Transform( -0.258819, 0, -0.965925, 0, 1, 0, 0.965925, 0, -0.258819, 0, 0, 0 )
enabled = true
cast_to = Vector3( 0, 0, 1.06 )
collision_mask = 3
debug_shape_custom_color = Color( 0.968627, 1, 0, 1 )

[node name="RayCast12" type="RayCast" parent="WallDetectorRays"]
transform = Transform( -0.866025, 0, -0.5, 0, 1, 0, 0.5, 0, -0.866025, 0, 0, 0 )
enabled = true
cast_to = Vector3( 0, 0, 1.06 )
collision_mask = 3
debug_shape_custom_color = Color( 0.968627, 1, 0, 1 )

[node name="LedgeDetector" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.00782013, 1.29497, -1.32034 )
visible = false
script = ExtResource( 10 )

[node name="RayCastDown" type="RayCast" parent="LedgeDetector"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.232976 )
enabled = true
cast_to = Vector3( 0, -0.5, 0 )
collision_mask = 3
debug_shape_custom_color = Color( 0.396078, 0.972549, 0, 1 )
debug_shape_thickness = 4

[node name="RayCastDown2" type="RayCast" parent="LedgeDetector"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.35, 0, 0.354 )
enabled = true
cast_to = Vector3( 0, -0.5, 0 )
collision_mask = 3
debug_shape_custom_color = Color( 0.396078, 0.972549, 0, 1 )
debug_shape_thickness = 4

[node name="RayCastDown3" type="RayCast" parent="LedgeDetector"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.35, 0, 0.354 )
enabled = true
cast_to = Vector3( 0, -0.5, 0 )
collision_mask = 3
debug_shape_custom_color = Color( 0.396078, 0.972549, 0, 1 )
debug_shape_thickness = 4

[node name="PullUpTween" type="Tween" parent="."]
playback_process_mode = 0

[node name="DebugRay" type="RayCast" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1.26108, 0.0182769 )
visible = false
debug_shape_custom_color = Color( 0.0117647, 0.0470588, 0.87451, 1 )
debug_shape_thickness = 5
script = ExtResource( 4 )

[node name="PullUpChecker" type="Area" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.66039, -1.32088 )
visible = false
collision_layer = 0
collision_mask = 3

[node name="CollisionShape" type="CollisionShape" parent="PullUpChecker"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0 )
shape = SubResource( 6 )

[node name="InclineDetector" type="Area" parent="."]
transform = Transform( 0.999977, 0, -0.00684137, 0, 1, 0, 0.00684137, 0, 0.999977, 0, 0.213, 0 )
visible = false
collision_layer = 0
collision_mask = 3
monitorable = false
script = ExtResource( 3 )

[node name="Cylinder" type="CollisionShape" parent="InclineDetector"]
transform = Transform( 1, 0, -1.74623e-10, 0, 1, 0, 1.74623e-10, 0, 1, 0, 0, 0 )
shape = SubResource( 8 )

[node name="BottomRays" type="Spatial" parent="InclineDetector"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1.26108, 0.0182769 )
script = ExtResource( 5 )

[node name="RayBottomCenter" type="RayCast" parent="InclineDetector/BottomRays"]
process_priority = -1
transform = Transform( 0.999999, 0, 0, 0, 1, 0, 0, 0, 0.999999, 0, 0, 0 )
enabled = true
cast_to = Vector3( 0, 0, -1 )
collision_mask = 3
debug_shape_custom_color = Color( 0.172549, 1, 0, 1 )
debug_shape_thickness = 5

[node name="RayBottom80Right" type="RayCast" parent="InclineDetector/BottomRays"]
transform = Transform( 0.173648, 0, -0.984808, 0, 1, 0, 0.984808, 0, 0.173648, 0, 0, 0 )
enabled = true
cast_to = Vector3( 0, 0, -1 )
collision_mask = 3
debug_shape_custom_color = Color( 0.564706, 0.964706, 0.294118, 1 )
debug_shape_thickness = 4

[node name="RayBottom80Left" type="RayCast" parent="InclineDetector/BottomRays"]
transform = Transform( 0.173648, 0, 0.984808, 0, 1, 0, -0.984808, 0, 0.173648, 0, 0, 0 )
enabled = true
cast_to = Vector3( 0, 0, -1 )
collision_mask = 3
debug_shape_custom_color = Color( 0.411765, 0.811765, 0.247059, 1 )
debug_shape_thickness = 4

[node name="RayBottom60Right" type="RayCast" parent="InclineDetector/BottomRays"]
transform = Transform( 0.707107, 0, -0.707107, 0, 1, 0, 0.707107, 0, 0.707107, 0, 0, 0 )
enabled = true
cast_to = Vector3( 0, 0, -1 )

[node name="RayBottom60Left" type="RayCast" parent="InclineDetector/BottomRays"]
transform = Transform( 0.707107, 0, 0.707107, 0, 1, 0, -0.707107, 0, 0.707107, 0, 0, 0 )
enabled = true
cast_to = Vector3( 0, 0, -1 )

[node name="Top Rays" type="Spatial" parent="InclineDetector"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.07634, 0 )
script = ExtResource( 5 )

[node name="RayTop" type="RayCast" parent="InclineDetector/Top Rays"]
enabled = true
cast_to = Vector3( 0, 0, -1 )
collision_mask = 3
debug_shape_custom_color = Color( 0.282353, 0.85098, 0.0509804, 1 )
debug_shape_thickness = 5

[node name="RayTopRight" type="RayCast" parent="InclineDetector/Top Rays"]
transform = Transform( 0.173648, 0, -0.984808, 0, 1, 0, 0.984808, 0, 0.173648, 0, 0, 0 )
enabled = true
cast_to = Vector3( 0, 0, -1 )
collision_mask = 3
debug_shape_custom_color = Color( 0.282353, 0.768627, 0.145098, 1 )
debug_shape_thickness = 4

[node name="RayTopLeft" type="RayCast" parent="InclineDetector/Top Rays"]
transform = Transform( 0.173648, 0, 0.984808, 0, 1, 0, -0.984808, 0, 0.173648, 0, 0, 0 )
enabled = true
cast_to = Vector3( 0, 0, -1 )
collision_mask = 3
debug_shape_custom_color = Color( 0.156863, 0.854902, 0.184314, 1 )
debug_shape_thickness = 4

[node name="SpecialDetector" type="Area" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.012606, 0.0287941 )
visible = false
collision_layer = 0
collision_mask = 56
script = ExtResource( 6 )

[node name="CollisionShape" type="CollisionShape" parent="SpecialDetector"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.0248942 )
shape = SubResource( 9 )

[node name="VaultTween" type="Tween" parent="."]
script = ExtResource( 7 )

[node name="WindowSmasher" type="Node" parent="."]
script = ExtResource( 8 )

[node name="onFloorChecker" type="RayCast" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1.46619, 0 )
enabled = true
cast_to = Vector3( 0, -0.2, 0 )
debug_shape_custom_color = Color( 1, 0.560784, 0, 1 )

[node name="GushingAirAudio" type="AudioStreamPlayer" parent="."]
stream = SubResource( 13 )
volume_db = -18.407
script = ExtResource( 15 )

[node name="JumpSounds" type="Spatial" parent="."]
script = ExtResource( 12 )

[node name="VoiceSounds" type="AudioStreamPlayer" parent="JumpSounds"]
stream = SubResource( 10 )
volume_db = -10.123

[node name="Timer" type="Timer" parent="JumpSounds/VoiceSounds"]
one_shot = true

[node name="FootSounds" type="AudioStreamPlayer3D" parent="JumpSounds"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.229, 0 )
stream = SubResource( 17 )

[node name="PullUpSound" type="AudioStreamPlayer3D" parent="JumpSounds"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.229, 0 )
stream = SubResource( 12 )
unit_db = -18.0

[node name="HUD" parent="." instance=ExtResource( 17 )]

[node name="SlideParticles" type="Spatial" parent="."]
script = ExtResource( 21 )

[node name="SlideParticleSystemGround" type="CPUParticles" parent="SlideParticles"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, -0.787941, -1.18041 )
cast_shadow = 0
amount = 16
speed_scale = 5.97
lifetime_randomness = 0.13
fixed_fps = 15
mesh = SubResource( 14 )
emission_shape = 1
emission_sphere_radius = 0.4
flag_rotate_y = true
direction = Vector3( 0, 1, -1 )
gravity = Vector3( 0, 0, 0 )
initial_velocity = 3.0
initial_velocity_random = 0.81
damping = 4.85
damping_random = 0.07
scale_amount = 0.8
scale_amount_random = 0.87

[node name="SlideParticleSystemAir" type="CPUParticles" parent="SlideParticles"]
transform = Transform( 1.31134e-07, -1, 4.37114e-08, 0, -4.37114e-08, -1, 1, 1.31134e-07, -5.73206e-15, 0.308925, -0.628499, -1.18041 )
cast_shadow = 0
amount = 4
speed_scale = 5.97
lifetime_randomness = 0.13
fixed_fps = 15
mesh = SubResource( 15 )
emission_shape = 5
emission_ring_radius = 1.0
emission_ring_inner_radius = 0.0
emission_ring_height = 1.0
emission_ring_axis = Vector3( 0, 0, 1 )
flag_rotate_y = true
direction = Vector3( 0, 1, -1 )
gravity = Vector3( 0, 0, 0 )
initial_velocity_random = 0.81
damping = 4.85
damping_random = 0.07
scale_amount = 0.8
scale_amount_random = 0.87

[node name="StepSounds" type="Spatial" parent="."]
script = ExtResource( 14 )

[node name="StepAudio" type="AudioStreamPlayer3D" parent="StepSounds"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1.54435, 0 )
stream = ExtResource( 13 )

[node name="StepAudioMetal" type="AudioStreamPlayer3D" parent="StepSounds"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1.54435, 0 )
stream = SubResource( 16 )

[node name="SlideAudio" type="AudioStreamPlayer3D" parent="StepSounds"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1.54435, 0 )
stream = ExtResource( 23 )

[connection signal="speed_changed" from="." to="InclineDetector" method="_on_Player_speed_changed"]
[connection signal="tween_completed" from="PullUpTween" to="." method="_on_PullUpTween_tween_completed"]
[connection signal="tween_started" from="PullUpTween" to="." method="_on_PullUpTween_tween_started"]
[connection signal="body_entered" from="InclineDetector" to="." method="_on_InclineDetector_body_entered"]
[connection signal="body_exited" from="InclineDetector" to="." method="_on_InclineDetector_body_exited"]
[connection signal="area_entered" from="SpecialDetector" to="." method="_on_SpecialDetector_area_entered"]
[connection signal="tween_completed" from="VaultTween" to="VaultTween" method="_on_VaultTween_tween_completed"]
[connection signal="tween_started" from="VaultTween" to="VaultTween" method="_on_VaultTween_tween_started"]
[connection signal="timeout" from="JumpSounds/VoiceSounds/Timer" to="JumpSounds" method="_on_Timer_timeout"]
